# PFLlib

./: .gitignore  AGENTS.md  Makefile  _migrate.py  pyproject.toml
pfllib/: __init__.py  __main__.py  cli.py  config.py  logger.py  registry.py  runner.py
pfllib/clients/: __init__.py  ala.py  amp.py  apfl.py  apple.py  asfl.py  avg.py  babu.py  base.py  bn.py  cac.py  cp.py  cross.py  da.py  dbe.py  ditto.py  dyn.py  fd.py  fml.py  fomo.py  gc.py  gen.py  gh.py  gpfl.py  kd.py  lc.py  lg.py  moon.py  mtl.py  ntd.py  pac.py  pcl.py  per.py  peravg.py  pfedme.py  php.py  proto.py  prox.py  rep.py  rod.py  (+1 more)
pfllib/data/: __init__.py  har_utils.py  language_utils.py  reader.py  utils.py
pfllib/data/generators/: __init__.py  agnews.py  amazonreview.py  camelyon17.py  cifar10.py  cifar100.py  country211.py  covidx.py  digit5.py  domainnet.py  emnist.py  fashionmnist.py  femnist.py  flowers102.py  gtsrb.py  har.py  iwildcam.py  (+8 more)
pfllib/models/: __init__.py  base.py  bilstm.py  cnn.py  lstm.py  mobilenet.py  resnet.py  transformer.py
pfllib/optimizers/: __init__.py  fed_optimizers.py
pfllib/privacy/: __init__.py  dlg.py
pfllib/servers/: __init__.py  ala.py  amp.py  apfl.py  apple.py  asfl.py  avg.py  babu.py  base.py  bn.py  cac.py  cp.py  cross.py  da.py  dbe.py  ditto.py  dyn.py  fd.py  fml.py  fomo.py  gc.py  gen.py  gh.py  gpfl.py  kd.py  lc.py  lg.py  local.py  moon.py  mtl.py  ntd.py  pac.py  pcl.py  per.py  peravg.py  pfedme.py  php.py  proto.py  prox.py  rep.py  (+2 more)
pfllib/utils/: __init__.py  ala.py  mem.py  results.py
tests/: conftest.py  test_core.py  test_unit.py
