[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfllib"
version = "0.1.0"
description = "Personalized Federated Learning Library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "h5py>=3.10.0",
    "loguru>=0.7.3",
    "numpy<2",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "typer>=0.9.0",
    "ujson>=5.8.0",
]

[project.optional-dependencies]
cv = [
    "torchvision>=0.15.0",
]
nlp = [
    "torchtext>=0.15.0",
]
privacy = [
    "diffusers>=0.20.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]
diffusion = [
    "diffusers>=0.20.0",
    "transformers>=4.30.0",
]
all = [
    "pfllib[cv,nlp,privacy,diffusion]",
    "higher>=0.2.1",
    "cvxpy>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "memory-profiler>=0.61.0",
    "calmsize>=0.1.3",
    "portalocker>=2.0.0",
]
dev = [
    "pfllib[all]",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
pfllib = "pfllib.cli:app"

[tool.setuptools.packages.find]
include = ["pfllib*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E711", "E721", "E731", "E741", "F401", "F402", "F403", "F405", "F821", "F841"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
